<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('model_answers', function (Blueprint $table) {
            $table->string('exam_code');
            $table->string('question_code');
            $table->text('text')->nullable();
            $table->timestamps();
            $table->primary(['exam_code', 'question_code']);
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('model_answers');
    }
};
