@startuml er
title 支援士対策室 ER図
hide circle
skinparam linetype ortho
skinparam shadowing false

entity "users" as users {
  id : bigint
  --
  is_admin : boolean
  username : varchar
  password : varchar
  deleted_at : timestamp
  remember_token : varchar
  created_at : timestamp
  updated_at : timestamp
}

entity "exam_sentences" as exam_sentences {
  exam_code : varchar
  --
  sentence : text
  purpose : text
  review_comment : text
  created_at : timestamp
  updated_at : timestamp
}

entity "questions" as questions {
  exam_code : varchar <<FK>>
  question_code : varchar <<PK>>
  --
  text : text
  type : enum
  options : json
  max_length : int
  text_for_ai : longtext
  created_at : timestamp
  updated_at : timestamp
}

entity "model_answers" as model_answers {
  exam_code : varchar <<FK>>
  question_code : varchar <<FK>>
  --
  text : text
  created_at : timestamp
  updated_at : timestamp
}

entity "user_answers" as user_answers {
  user_id : bigint <<FK>>
  exam_code : varchar <<FK>>
  question_code : varchar <<FK>>
  --
  user_text : text
  ai_rating : text
  ai_text : text
  created_at : timestamp
  updated_at : timestamp
}

entity "user_ai_dialogues" as user_ai_dialogues {
  id : bigint
  --
  user_id : bigint <<FK>>
  exam_code : varchar <<FK>>
  question_code : varchar <<FK>>
  user_question : text
  ai_answer : text
  created_at : timestamp
  updated_at : timestamp
}

entity "submitted_exams" as submitted_exams {
  id : bigint
  --
  user_id : bigint <<FK>>
  exam_code : varchar <<FK>>
  created_at : timestamp
  updated_at : timestamp
}

entity "inquiries" as inquiries {
  id : bigint
  --
  user_id : bigint <<FK nullable>>
  name : varchar
  email : varchar
  message : text
  created_at : timestamp
  updated_at : timestamp
}

entity "news_items" as news_items {
  id : bigint
  --
  title : varchar
  content : text
  published_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

users ||--o{ user_answers
users ||--o{ user_ai_dialogues
users ||--o{ submitted_exams
users |o--o{ inquiries

exam_sentences ||--o{ questions
exam_sentences ||--o{ submitted_exams

questions ||--o| model_answers
questions ||--o{ user_answers
questions ||--o{ user_ai_dialogues

@enduml
